[package]
name = "ub_vpe_custom"
version = "0.1.0"
edition = "2021"

[lib]
name = "ub_vpe_custom"
path = "src/ub_vpe_custom.rs"
crate-type = ["lib"]

[dependencies]
vpe = { path="vp-engine" }
vpb = { path="vp-engine/vp-base" }
ash = { version = "0.37.2+1.3.238", features = ["linked"] }
memoffset = "0.8.0"
nalgebra = "0.31.4"